--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 androidx-multidex = "2.0.1"
+browser = "1.8.0"
 kotlin = "2.0.21"
 coreKtx = "1.15.0"
 agp = "8.2.0-rc03"
@@ -10,13 +11,13 @@ lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
 composeBom = "2024.12.01"
 material3 = "1.3.1"
-mockk = "1.13.3"
+mockk = "1.13.5"
 mockk-mockk = "1.13.5"
 navigationCompose = "2.8.5"
-compose-hilt-navigation = "1.1.0"
+compose-hilt-navigation = "1.2.0"
 kotlinxSerializationJson = "1.6.3"
 roomTesting = "2.6.1"
-serializationGradlePlugin = "1.9.0"
+serializationGradlePlugin = "1.9.10"
 retrofit = "2.11.0"
 okhttpLogging = "4.12.0"
 okhttp = "5.0.0-alpha.2"
@@ -29,12 +30,13 @@ hiltGradlePlugin = "2.51.1"
 appcompat = "1.7.0"
 lifecycle-viewmodel = "2.8.7"
 
-kotlinxCoroutines = "1.8.1"
+kotlinxCoroutines = "1.9.0"
 material = "1.12.0"
 
 
 [libraries]
 # Native Core
+androidx-browser = { module = "androidx.browser:browser", version.ref = "browser" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle-viewmodel" }
